fix: error get sales